[gd_scene load_steps=9 format=3 uid="uid://dc2rkan1l8rv3"]

[ext_resource type="Shader" path="res://texture_rect.gdshader" id="1_0mo6u"]
[ext_resource type="Script" path="res://TextureManager.gd" id="2_r677i"]
[ext_resource type="Script" path="res://LifeCompute.gd" id="3_7i6xe"]
[ext_resource type="Script" path="res://UI.gd" id="4_tfa7u"]
[ext_resource type="Script" path="res://Camera2D.gd" id="5_f05fj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v4b5d"]
shader = ExtResource("1_0mo6u")
shader_parameter/background = null
shader_parameter/color = null

[sub_resource type="FontVariation" id="FontVariation_80caj"]

[sub_resource type="LabelSettings" id="LabelSettings_ardtw"]
font = SubResource("FontVariation_80caj")
font_color = Color(0.647059, 0.647059, 0.647059, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.556863)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LifeCompute" type="Node" parent="."]
script = ExtResource("3_7i6xe")
random_proportion = 0.188

[node name="TextureManager" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_v4b5d")
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 1023.0
offset_bottom = 1023.0
ignore_texture_size = true
script = ExtResource("2_r677i")
initial_texture = "res://assets/breeder.png"

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_tfa7u")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -91.0
offset_bottom = 101.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_layout_mode = 1

[node name="randomise_button" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
offset_right = 91.0
offset_bottom = 31.0
text = "randomise"

[node name="Panel" type="Panel" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2i(0, 32)
layout_mode = 2
offset_top = 35.0
offset_right = 91.0
offset_bottom = 67.0
size_flags_vertical = 3

[node name="run_button" type="CheckButton" parent="UI/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 16
text = "run"

[node name="step_button" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
offset_top = 71.0
offset_right = 91.0
offset_bottom = 102.0
text = "step l>"

[node name="SpeedLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
offset_top = 106.0
offset_right = 91.0
offset_bottom = 132.0
text = "Speed: 1"
horizontal_alignment = 3

[node name="Speed" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
offset_top = 136.0
offset_right = 91.0
offset_bottom = 152.0
max_value = 5.0
step = 0.25
value = 1.0

[node name="VSlider" type="VSlider" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 16.0
grow_vertical = 2
min_value = 1.0
max_value = 8.0
step = 0.01
value = 1.0
exp_edit = true

[node name="FPS" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "FPS: 0"
label_settings = SubResource("LabelSettings_ardtw")
horizontal_alignment = 3
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 512)
current = true
script = ExtResource("5_f05fj")

[connection signal="pressed" from="UI/VBoxContainer/randomise_button" to="UI" method="_on_randomise_button_pressed"]
[connection signal="toggled" from="UI/VBoxContainer/Panel/run_button" to="UI" method="_on_run_button_toggled"]
[connection signal="pressed" from="UI/VBoxContainer/step_button" to="UI" method="_on_step_button_pressed"]
[connection signal="value_changed" from="UI/VBoxContainer/Speed" to="UI" method="_on_speed_value_changed"]
[connection signal="value_changed" from="UI/VSlider" to="UI" method="_on_h_slider_value_changed"]
